crates/test-files/fixtures/compile_errors/ctx_missing_event.fe
use std::context::Context

event HelloWorld {
    message: String<26>
}

contract Bar {
    pub fn say_hello(ctx: Context) {
        emit HelloWorld(message: "hello world")
    }
}
